Added section on OpenJDK 11 (Windows)