@@ -80,6 +80,28 @@ For more information, [please see issue #523](https://github.com/llbit/chunky/is
 
 ---
 
+#### OpenJDK 11 OpenJFX on Windows
+
+1. Install OpenJDK of your choice.
+
+2. Download OpenJFX, extract, and copy the `Bin` and `Lib` folder into the OpenJDK install directory; Typcially, this would be something like `C:\Program Files\AdoptOpenJDK\jdk-11.0.8.10-hotspot` where you should see existing `Bin` and `Lib` folders.
+
+3. In the `Lib` folder found in your OpenJDK install directory, find and delete `jrt-fs.jar` otherwise you will run into an error when attempting to launch Chunky - `java.lang.LayerInstantiationException: Package jdk.internal.jimage in both module java.base and module jrt.fs`.
+
+4. Launch ChunkyLauncher.jar via command line using `java --module-path "path\to\openjdk\lib" --add-modules=javafx.controls,javafx.base,javafx.graphics,javafx.fxml -jar "path\to\chunkylauncher\chunkylauncher.jar"`
+
+ie
+
+`java --module-path "C:\Program Files\AdoptOpenJDK\jdk-11.0.8.10-hotspot\lib" --add-modules=javafx.controls,javafx.base,javafx.graphics,javafx.fxml -jar D:\Programs\Chunky_293\chunkylauncher.jar`
+
+5. Inside ChunkyLauncher, under Advanced Settings add the same `--module-path` and `--add-modules` options to the `Java options` field. 
+
+ie
+
+`--module-path "C:\Program Files\AdoptOpenJDK\jdk-11.0.8.10-hotspot\lib" --add-modules=javafx.controls,javafx.base,javafx.graphics,javafx.fxml`
+
+---
+
 ## Double clicking ChunkyLauncher.jar doesn't work on Windows?
 
 A common issue with Java on Windows is that jar files may not be correctly associated with Java.
